--- a/FaceTek/Timesheet/timesheettblcell.xib
+++ b/FaceTek/Timesheet/timesheettblcell.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,34 +17,38 @@
                 <rect key="frame" x="0.0" y="0.0" width="430" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lZn-Ic-Px0">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="55"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lZn-Ic-Px0">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Mu-Ml-OxM">
-                                <rect key="frame" x="10" y="5" width="275" height="50"/>
+                                <rect key="frame" x="10" y="5" width="250" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Elj-aG-aF8"/>
-                                    <constraint firstAttribute="width" constant="275" id="q2T-7j-7Ib"/>
+                                    <constraint firstAttribute="width" constant="250" id="q2T-7j-7Ib"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.10196078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Timesheetclock.png" translatesAutoresizingMaskIntoConstraints="NO" id="CYU-CN-ydW">
-                                <rect key="frame" x="390" y="22" width="16" height="16"/>
-                                <color key="tintColor" systemColor="systemBlueColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BeK-Bg-nEe">
+                                <rect key="frame" x="341" y="5" width="80" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="16" id="cSP-k7-Ojt"/>
-                                    <constraint firstAttribute="height" constant="16" id="m5O-qK-Jci"/>
+                                    <constraint firstAttribute="width" constant="80" id="K0n-oO-iQR"/>
+                                    <constraint firstAttribute="height" constant="50" id="djT-6d-cFh"/>
                                 </constraints>
-                            </imageView>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="CYU-CN-ydW" secondAttribute="trailing" constant="24" id="3gs-MG-bwJ"/>
                             <constraint firstItem="9Mu-Ml-OxM" firstAttribute="leading" secondItem="lZn-Ic-Px0" secondAttribute="leading" constant="10" id="PE7-09-PRa"/>
+                            <constraint firstItem="BeK-Bg-nEe" firstAttribute="top" secondItem="lZn-Ic-Px0" secondAttribute="top" constant="5" id="S15-3T-eQK"/>
                             <constraint firstItem="9Mu-Ml-OxM" firstAttribute="top" secondItem="lZn-Ic-Px0" secondAttribute="top" constant="5" id="SNW-1d-XCq"/>
-                            <constraint firstItem="CYU-CN-ydW" firstAttribute="top" secondItem="lZn-Ic-Px0" secondAttribute="top" constant="22" id="YHo-dl-Lca"/>
+                            <constraint firstAttribute="trailing" secondItem="BeK-Bg-nEe" secondAttribute="trailing" constant="9" id="p8b-lV-6iR"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -58,16 +61,11 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="hrslbl" destination="BeK-Bg-nEe" id="Jnb-XX-sdy"/>
                 <outlet property="subtasktbllbl" destination="9Mu-Ml-OxM" id="ORW-Kz-fbp"/>
                 <outlet property="tableviewsubtaskcellbackview" destination="lZn-Ic-Px0" id="BHe-OP-ibf"/>
             </connections>
             <point key="canvasLocation" x="57.971014492753625" y="104.46428571428571"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="Timesheetclock.png" width="22" height="22"/>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
