--- a/FaceTek/Timesheet/Selectcustcell.xib
+++ b/FaceTek/Timesheet/Selectcustcell.xib
@@ -17,18 +17,18 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzb-dr-VNc">
-                        <rect key="frame" x="35" y="12" width="264" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzb-dr-VNc">
+                        <rect key="frame" x="20" y="5" width="290" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="264" id="ea3-nO-YcB"/>
-                            <constraint firstAttribute="height" constant="21" id="hnj-iq-MHK"/>
+                            <constraint firstAttribute="width" constant="290" id="ea3-nO-YcB"/>
+                            <constraint firstAttribute="height" constant="30" id="hnj-iq-MHK"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZX1-eO-L5k">
-                        <rect key="frame" x="15" y="17" width="12" height="12"/>
+                        <rect key="frame" x="4" y="14" width="12" height="12"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="12" id="Gd5-Sw-4Hb"/>
                             <constraint firstAttribute="width" constant="12" id="uhp-uL-6zc"/>
@@ -36,11 +36,12 @@
                         <state key="normal" backgroundImage="circle.png"/>
                     </button>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="ZX1-eO-L5k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="E1L-Oo-atW"/>
-                    <constraint firstItem="tzb-dr-VNc" firstAttribute="leading" secondItem="ZX1-eO-L5k" secondAttribute="trailing" constant="8" id="E3c-0W-lrK"/>
-                    <constraint firstItem="ZX1-eO-L5k" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="MNc-sv-8jP"/>
-                    <constraint firstItem="tzb-dr-VNc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="jqI-Z8-FdN"/>
+                    <constraint firstItem="ZX1-eO-L5k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="E1L-Oo-atW"/>
+                    <constraint firstItem="tzb-dr-VNc" firstAttribute="leading" secondItem="ZX1-eO-L5k" secondAttribute="trailing" constant="4" id="E3c-0W-lrK"/>
+                    <constraint firstItem="ZX1-eO-L5k" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="MNc-sv-8jP"/>
+                    <constraint firstItem="tzb-dr-VNc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="jqI-Z8-FdN"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
