--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -7661,7 +7661,7 @@
                                                         </connections>
                                                     </tableView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D1d-kN-lYM">
-                                                        <rect key="frame" x="0.0" y="110" width="355" height="85"/>
+                                                        <rect key="frame" x="0.0" y="110" width="355" height="125"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remarks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bUl-yk-7Y1">
                                                                 <rect key="frame" x="10" y="15" width="180" height="21"/>
@@ -7711,10 +7711,30 @@
                                                                 </connections>
                                                             </button>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ctv-k9-5Bm">
-                                                                <rect key="frame" x="0.0" y="84" width="355" height="1"/>
+                                                                <rect key="frame" x="0.0" y="80" width="355" height="1"/>
                                                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="Jdp-7T-qXb"/>
+                                                                </constraints>
+                                                            </view>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kXX-I7-0Xr">
+                                                                <rect key="frame" x="0.0" y="88" width="355" height="30"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="30" id="XpQ-D5-4j6"/>
+                                                                </constraints>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                <state key="normal" title="   Claim expense against task">
+                                                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </state>
+                                                                <connections>
+                                                                    <action selector="claimExpenseBtnclk:" destination="TD3-FY-sTZ" eventType="touchUpInside" id="jfz-Z5-EUF"/>
+                                                                </connections>
+                                                            </button>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="74t-61-us2">
+                                                                <rect key="frame" x="0.0" y="124" width="355" height="1"/>
+                                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="1" id="CKz-3v-zgH"/>
                                                                 </constraints>
                                                             </view>
                                                         </subviews>
@@ -7724,14 +7744,20 @@
                                                             <constraint firstItem="bUl-yk-7Y1" firstAttribute="top" secondItem="D1d-kN-lYM" secondAttribute="top" constant="15" id="2lU-Og-a1v"/>
                                                             <constraint firstAttribute="trailing" secondItem="Vdp-6q-WkK" secondAttribute="trailing" constant="18" id="6Xx-sL-3kE"/>
                                                             <constraint firstItem="Wqv-jV-FCv" firstAttribute="leading" secondItem="D1d-kN-lYM" secondAttribute="leading" constant="10" id="7dk-Ga-I4C"/>
+                                                            <constraint firstItem="kXX-I7-0Xr" firstAttribute="top" secondItem="ctv-k9-5Bm" secondAttribute="bottom" constant="7" id="CD0-NQ-nZM"/>
                                                             <constraint firstItem="f94-jR-4f8" firstAttribute="top" secondItem="D1d-kN-lYM" secondAttribute="top" constant="15" id="FpU-Kw-fkQ"/>
-                                                            <constraint firstAttribute="height" constant="85" id="OCd-Ph-Z0z"/>
-                                                            <constraint firstAttribute="bottom" secondItem="ctv-k9-5Bm" secondAttribute="bottom" id="VQj-0s-bLk"/>
+                                                            <constraint firstItem="kXX-I7-0Xr" firstAttribute="leading" secondItem="D1d-kN-lYM" secondAttribute="leading" id="Jmn-2D-yqB"/>
+                                                            <constraint firstAttribute="height" constant="125" id="OCd-Ph-Z0z"/>
+                                                            <constraint firstAttribute="bottom" secondItem="ctv-k9-5Bm" secondAttribute="bottom" constant="44" id="VQj-0s-bLk"/>
+                                                            <constraint firstAttribute="trailing" secondItem="74t-61-us2" secondAttribute="trailing" id="aIe-4d-eKp"/>
                                                             <constraint firstItem="ctv-k9-5Bm" firstAttribute="leading" secondItem="D1d-kN-lYM" secondAttribute="leading" id="f70-9X-B0B"/>
+                                                            <constraint firstAttribute="bottom" secondItem="74t-61-us2" secondAttribute="bottom" id="gaP-gp-CY8"/>
                                                             <constraint firstAttribute="trailing" secondItem="ctv-k9-5Bm" secondAttribute="trailing" id="hWC-rR-MKY"/>
                                                             <constraint firstItem="Vdp-6q-WkK" firstAttribute="top" secondItem="D1d-kN-lYM" secondAttribute="top" constant="49" id="kYZ-em-pvj"/>
                                                             <constraint firstAttribute="trailing" secondItem="f94-jR-4f8" secondAttribute="trailing" constant="5" id="m07-3R-RFK"/>
+                                                            <constraint firstItem="74t-61-us2" firstAttribute="leading" secondItem="D1d-kN-lYM" secondAttribute="leading" id="n2r-kb-aa4"/>
                                                             <constraint firstItem="Wqv-jV-FCv" firstAttribute="top" secondItem="bUl-yk-7Y1" secondAttribute="bottom" constant="9" id="rF0-Au-Saa"/>
+                                                            <constraint firstAttribute="trailing" secondItem="kXX-I7-0Xr" secondAttribute="trailing" id="zsZ-G7-0Vv"/>
                                                         </constraints>
                                                     </view>
                                                 </subviews>
@@ -8080,6 +8106,7 @@
                     </view>
                     <size key="freeformSize" width="375" height="800"/>
                     <connections>
+                        <outlet property="Claimcxpensebtn" destination="kXX-I7-0Xr" id="Zwf-2m-rbe"/>
                         <outlet property="ContentView" destination="PYF-jf-Y3v" id="g1m-j8-Mze"/>
                         <outlet property="Datetimeview" destination="oBw-xJ-yh4" id="VQf-gJ-Dtm"/>
                         <outlet property="NoremarksBackview" destination="Jnm-37-GAv" id="aVH-3B-a2M"/>
