--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -2135,7 +2135,7 @@
                                             <constraint firstAttribute="width" constant="25" id="oqu-QR-P5G"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Custmer Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zZw-0X-1ZA">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="customer Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zZw-0X-1ZA">
                                         <rect key="frame" x="41" y="15" width="248" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="248" id="a0f-HN-cMx"/>
@@ -2232,7 +2232,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile:-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Tz-zf-j6W">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Tz-zf-j6W">
                                         <rect key="frame" x="19" y="200" width="70" height="22"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -5199,24 +5199,14 @@
                                                     <constraint firstAttribute="trailing" secondItem="pgr-ei-dAp" secondAttribute="trailing" constant="14" id="yuP-Zg-Twv"/>
                                                 </constraints>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GHA-73-uUL">
-                                                <rect key="frame" x="0.0" y="550" width="375" height="10"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="10" id="NbZ-ZT-cwp"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N39-Ya-p5e">
-                                                <rect key="frame" x="0.0" y="560" width="375" height="50"/>
+                                                <rect key="frame" x="0.0" y="550" width="375" height="50"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jQh-gR-GPx">
-                                                        <rect key="frame" x="8" y="1" width="360" height="50"/>
+                                                        <rect key="frame" x="8" y="1" width="360" height="43"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="50" id="OVJ-dG-lCZ"/>
+                                                            <constraint firstAttribute="height" constant="43" id="OVJ-dG-lCZ"/>
                                                         </constraints>
                                                     </view>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaves1.png" translatesAutoresizingMaskIntoConstraints="NO" id="l4w-Yv-Ocn">
@@ -5265,7 +5255,7 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiH-qj-LpT">
-                                                <rect key="frame" x="0.0" y="610" width="375" height="10"/>
+                                                <rect key="frame" x="0.0" y="600" width="375" height="20"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                                 <nil key="textColor"/>
@@ -5279,7 +5269,6 @@
                                             <constraint firstAttribute="trailing" secondItem="N39-Ya-p5e" secondAttribute="trailing" id="7KN-8E-9QH"/>
                                             <constraint firstItem="Fzw-mg-0hg" firstAttribute="leading" secondItem="bdp-rb-A2A" secondAttribute="leading" id="9oL-Vz-tSy"/>
                                             <constraint firstItem="wcL-Y3-Oi0" firstAttribute="top" secondItem="Ls9-r5-xGE" secondAttribute="bottom" id="DQc-C3-fx9"/>
-                                            <constraint firstItem="GHA-73-uUL" firstAttribute="top" secondItem="Fzw-mg-0hg" secondAttribute="bottom" id="JNe-OW-enb"/>
                                             <constraint firstItem="wks-js-2Ba" firstAttribute="top" secondItem="aj2-HC-bzt" secondAttribute="bottom" id="MSx-NL-dOG"/>
                                             <constraint firstAttribute="trailing" secondItem="aj2-HC-bzt" secondAttribute="trailing" id="Mgr-fm-7XI"/>
                                             <constraint firstAttribute="trailing" secondItem="DQt-98-jDo" secondAttribute="trailing" id="Snx-8U-4Ae"/>
@@ -5289,13 +5278,10 @@
                                             <constraint firstItem="N39-Ya-p5e" firstAttribute="leading" secondItem="bdp-rb-A2A" secondAttribute="leading" id="dD6-3L-92m"/>
                                             <constraint firstAttribute="trailing" secondItem="Ls9-r5-xGE" secondAttribute="trailing" id="ebi-jF-1CT"/>
                                             <constraint firstItem="Fzw-mg-0hg" firstAttribute="top" secondItem="wcL-Y3-Oi0" secondAttribute="bottom" id="ehG-eg-KFi"/>
-                                            <constraint firstAttribute="trailing" secondItem="GHA-73-uUL" secondAttribute="trailing" id="feh-wA-8zN"/>
                                             <constraint firstItem="Ls9-r5-xGE" firstAttribute="top" secondItem="DQt-98-jDo" secondAttribute="bottom" id="khj-Xx-SKU"/>
                                             <constraint firstItem="DQt-98-jDo" firstAttribute="top" secondItem="wks-js-2Ba" secondAttribute="bottom" id="mtG-hG-HrO"/>
                                             <constraint firstItem="aj2-HC-bzt" firstAttribute="top" secondItem="bdp-rb-A2A" secondAttribute="top" id="op8-S5-r4e"/>
-                                            <constraint firstItem="GHA-73-uUL" firstAttribute="leading" secondItem="bdp-rb-A2A" secondAttribute="leading" id="pLQ-bb-x2f"/>
                                             <constraint firstItem="aj2-HC-bzt" firstAttribute="leading" secondItem="bdp-rb-A2A" secondAttribute="leading" id="tnL-MM-1kM"/>
-                                            <constraint firstItem="N39-Ya-p5e" firstAttribute="top" secondItem="GHA-73-uUL" secondAttribute="bottom" id="xSV-nZ-OcF"/>
                                             <constraint firstAttribute="trailing" secondItem="wcL-Y3-Oi0" secondAttribute="trailing" id="zSS-f1-Hxe"/>
                                         </constraints>
                                     </stackView>
@@ -5493,6 +5479,7 @@
                         <outlet property="Latecomersview" destination="o85-0T-gjV" id="Za5-Nz-z8g"/>
                         <outlet property="LeaveApplicationPendingLbl" destination="EKJ-m0-yIj" id="TEl-Z0-1l2"/>
                         <outlet property="LeaveApplicationPendingview" destination="N39-Ya-p5e" id="DY3-Am-c5m"/>
+                        <outlet property="LeaveBottomview" destination="jQh-gR-GPx" id="ruU-R6-nz3"/>
                         <outlet property="LeaveFromLbl" destination="95b-fT-Yg3" id="SAc-pj-bO9"/>
                         <outlet property="LeavePendingLbl" destination="IPS-U6-Ra3" id="GCF-WA-bGl"/>
                         <outlet property="LeavePendingimg" destination="l4w-Yv-Ocn" id="8Pb-ai-Yak"/>
@@ -5897,11 +5884,8 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2ZK-Vm-4mL">
-                                <rect key="frame" x="13" y="122" width="355" height="547"/>
+                                <rect key="frame" x="13" y="122" width="355" height="525"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="547" id="D0S-pf-YbF"/>
-                                </constraints>
                                 <connections>
                                     <outlet property="dataSource" destination="unN-jl-LuC" id="ovC-fZ-tVB"/>
                                     <outlet property="delegate" destination="unN-jl-LuC" id="hQi-lF-0gL"/>
@@ -5998,18 +5982,19 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="P4p-Jb-wd1" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="13" id="1IR-pd-ld3"/>
+                            <constraint firstItem="U7C-Z9-oSi" firstAttribute="bottom" secondItem="2ZK-Vm-4mL" secondAttribute="bottom" constant="20" id="34U-8Q-PfH"/>
                             <constraint firstItem="P4p-Jb-wd1" firstAttribute="top" secondItem="OdV-gE-XkG" secondAttribute="bottom" constant="10" id="5hV-9i-8Ed"/>
+                            <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="2ZK-Vm-4mL" secondAttribute="trailing" constant="7" id="LLj-Kh-C55"/>
                             <constraint firstItem="OdV-gE-XkG" firstAttribute="top" secondItem="U7C-Z9-oSi" secondAttribute="top" id="LmC-Jq-rgv"/>
                             <constraint firstItem="LG5-Vh-w9h" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="67" id="MlT-nb-GX9"/>
                             <constraint firstItem="LBp-qg-N3h" firstAttribute="trailing" secondItem="U7C-Z9-oSi" secondAttribute="trailing" id="ONg-DV-19s"/>
                             <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="LG5-Vh-w9h" secondAttribute="trailing" constant="68" id="PMY-Hm-FEb"/>
                             <constraint firstItem="LG5-Vh-w9h" firstAttribute="top" secondItem="P4p-Jb-wd1" secondAttribute="bottom" constant="100" id="QOY-c1-XYW"/>
-                            <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="2ZK-Vm-4mL" secondAttribute="trailing" constant="7" id="WKe-3a-4yB"/>
-                            <constraint firstItem="2ZK-Vm-4mL" firstAttribute="top" secondItem="P4p-Jb-wd1" secondAttribute="bottom" constant="2" id="WPv-Qy-k00"/>
+                            <constraint firstItem="2ZK-Vm-4mL" firstAttribute="top" secondItem="P4p-Jb-wd1" secondAttribute="bottom" constant="2" id="aPl-mw-yhv"/>
                             <constraint firstItem="OdV-gE-XkG" firstAttribute="trailing" secondItem="U7C-Z9-oSi" secondAttribute="trailing" id="br8-tu-MRV"/>
                             <constraint firstItem="OdV-gE-XkG" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" id="ciI-az-mvo"/>
                             <constraint firstItem="U7C-Z9-oSi" firstAttribute="trailing" secondItem="P4p-Jb-wd1" secondAttribute="trailing" constant="12" id="hPu-hA-g8e"/>
-                            <constraint firstItem="2ZK-Vm-4mL" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="13" id="oqX-09-dVX"/>
+                            <constraint firstItem="2ZK-Vm-4mL" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" constant="13" id="ix2-SL-Lyt"/>
                             <constraint firstItem="LBp-qg-N3h" firstAttribute="leading" secondItem="U7C-Z9-oSi" secondAttribute="leading" id="sHT-1L-fdF"/>
                             <constraint firstItem="LBp-qg-N3h" firstAttribute="top" secondItem="OdV-gE-XkG" secondAttribute="bottom" constant="60" id="xs6-mt-DSS"/>
                         </constraints>
