--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -2135,7 +2135,7 @@
                                             <constraint firstAttribute="width" constant="25" id="oqu-QR-P5G"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="customer Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zZw-0X-1ZA">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Customer Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zZw-0X-1ZA">
                                         <rect key="frame" x="41" y="15" width="248" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="248" id="a0f-HN-cMx"/>
